--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -5,7 +5,7 @@ ftp.pass=xingchen520
 ftp.server.http.prefix=http://file.vking.com/
 
 
-#alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
-#
-#password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
+
+password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
