--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,8 +1,9 @@
 db.driverLocation=E://tmp/mysql-connector-java-5.1.6.jar
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://114.67.240.25:3306/mmall?characterEncoding=utf-8
-db.username=xingking
-db.password=xingking
+# db.url=jdbc:mysql://114.67.240.25:3306/mmall?characterEncoding=utf-8
+db.url=jdbc:mysql://localhost:3306/vking?characterEncoding=utf-8
+db.username=root
+db.password=xingchen
 
 
 db.initialSize = 20
