--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -5,7 +5,7 @@ db.url=jdbc:mysql://localhost:3306/vking?characterEncoding=utf-8
 db.username=root
 db.password=xingchen
 
-
+ftp.server.http.prefix=c
 db.initialSize = 20
 db.maxActive = 50
 db.maxIdle = 20
